--- a/app/components/txt/txt.html
+++ b/app/components/txt/txt.html
@@ -17,29 +17,29 @@
 </div>
 <section class="txt__section">
 	<div class="txt__content">
-		<h2>
-			Заголовок H2 Профессиональные менеджеры-дизайнеры
-			выбранной вами Кухонной студии разработают для вас
-			индивидуальный дизайн-проект.
-		</h2>
-		<p>
-			Подобную возможность дает модель кухни «Альфа Кальвадос», представленная в нашем каталоге мебели.
-			Минимализм по-прежнему остается актуальным в такой сфере, как дизайн мебельных изделий. Особенно
-			востребован он будет при оформлении небольших по размеру помещений, где помпезность классического стиля
-			далеко не всегда бывает уместной.
-			<br>
-			<br>
-			<br>
-			В этом случае имеет смысл обратить внимание на эту модель, в которой основным украшением являются точно
-			выверенные прямые очертания и геометрически правильные формы.
-		</p>
-		<h3>
-			Заголовок H3 – это, без сомнения, отличное место для экспериментов. И не только кулинарных.
-			Почему бы не поиграть с линиями и пространством, выстраивая его по своему усмотрению и при этом
-			не перегружая лишними элементами?
-		</h3>
-
+		<div class="txt__block">
+			<h2>
+				Заголовок H2 Профессиональные менеджеры-дизайнеры <br>
+				выбранной вами Кухонной студии разработают для вас <br>
+				индивидуальный дизайн-проект.
+			</h2>
+			<p>
+				Подобную возможность дает модель кухни «Альфа Кальвадос», представленная в нашем каталоге мебели. <br>
+				Минимализм по-прежнему остается актуальным в такой сфере, как дизайн мебельных изделий. Особенно <br>
+				востребован он будет при оформлении небольших по размеру помещений, где помпезность классического стиля
+				<br> далеко не всегда бывает уместной.
+				<br>
+				<br>
+				В этом случае имеет смысл обратить внимание на эту модель, в которой основным украшением являются точно
+				<br>выверенные прямые очертания и геометрически правильные формы.
+			</p>
+		</div>
 		<div class="txt__block clearfix">
+			<h3>
+				Заголовок H3 – это, без сомнения, отличное место для экспериментов. И не только кулинарных. <br>
+				Почему бы не поиграть с линиями и пространством, выстраивая его по своему усмотрению и при этом
+				не перегружая лишними элементами?
+			</h3>
 			<div class="txt__img txt__img--fl-l">
 				<img src="./images/txt-img.jpg" alt="foto">
 			</div>
@@ -56,75 +56,68 @@
 				изделий.
 			</p>
 		</div>
-		<div class="txt__wrap">
-			<p>
-				Особенно востребован он будет при оформлении небольших по размеру помещений, где помпезность классического стиля
-				далеко не всегда бывает уместной.
-				<br>
-				<br>
-				В этом случае имеет смысл обратить внимание на эту модель, в которой основным украшением являются точно
-				выверенные прямые очертания и геометрически правильные формы.
-			</p>
-		</div>
+		<p>
+			Особенно востребован он будет при оформлении небольших по размеру помещений, где помпезность классического стиля
+			далеко не всегда бывает уместной.
+			<br>
+			<br>
+			В этом случае имеет смысл обратить внимание на эту модель, в которой основным украшением являются точно
+			выверенные прямые очертания и геометрически правильные формы.
+		</p>
 		<div class="txt__wrap">
 			<img src="./images/txt_ 700x400.jpg"  alt="foto" class="txt__img--full">
 		</div>
-
-	</div>
-
-	<div class="slider__work">
-		<div class="slider__work--title">
-			<h2>
-				Галерея фото
-			</h2>
-			<a href="#" class="nav nav--prev"></a>
-			<a href="#" class="nav nav--next"></a>
+		<div class="slider__work slider__work--full">
+			<div class="slider__work--title">
+				<h2>
+					Галерея фото
+				</h2>
+				<a href="#" class="nav nav--prev"></a>
+				<a href="#" class="nav nav--next"></a>
+			</div>
+			<div class="slider__work--window">
+				<ul class="slider__wrapper">
+					<li>
+						<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
+							<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
+						</a>
+					</li>
+					<li>
+						<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
+							<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
+						</a>
+					</li>
+					<li>
+						<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
+							<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
+						</a>
+					</li>
+					<li>
+						<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
+							<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
+						</a>
+					</li>
+					<li>
+						<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
+							<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
+						</a>
+					</li>
+					<li>
+						<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
+							<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
+						</a>
+					</li>
+					<li>
+						<a href="./images/img1_panel.jpg" class="fancybox" rel="gallery1">
+							<img src="./images/img1_panel.jpg" height="150" width="250" alt="foto">
+						</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-		<div class="slider__work--window">
-			<ul class="slider__wrapper">
-				<li>
-					<a href="#">
-						<img src="./images/img1_panel.jpg" alt="foto">
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/img1_panel.jpg" alt="foto">
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/img1_panel.jpg" alt="foto">
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/img1_panel.jpg" alt="foto">
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/img1_panel.jpg" alt="foto">
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/img1_panel.jpg" alt="foto">
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/img1_panel.jpg" alt="foto">
-					</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-	
-	<div class="txt__content">
+
 
 		<div class="txt__wrap">
-
 			<div class="txt__dib">
 				<p>Большинство покупателей приобретают</p>
 				<ol class="txt__list txt__list--numb">
@@ -148,37 +141,49 @@
 			</div>
 		</div>
 
-		<div class="txt__wrap">
+		<div class="txt__wrap--nopad">
+			<!-- <div class="txt__wrap"> -->
 			<p class="txt__colont">
-				Вы уже идёте в обычный обувной магазин? Сходите, может повезёт…
-				Переходим к магазинам при фабриках. Да, это уже лучше, чем обычный магазин. Но насколько? Наши, российские, фабрики могут
-				и должны составлять конкуренцию импортным ботинкам и сапогам. И это будет, только когда? А пока качество «родной» обуви оставляет
-				желать лучшего. Вы направились в сторону ближайшей обувной фабрики? Удачи и вот, наконец, мы добрались и до сетевых магазинов.
-				Начнём экспертизу?
+				Кухня – это, без сомнения, отличное место для экспериментов.
+				И не только кулинарных. Почему бы не поиграть с линиями
+				и пространством, выстраивая его по своему усмотрению и при этом
+				не перегружая лишнимиэлементами?
+				<br>
+				<br>
+				Подобную возможность дает модель кухни «Альфа Кальвадос»,
+				представленная в нашем каталоге мебели. Минимализм по-прежнему
+				остается актуальным в такой сфере, как дизайн мебельных
+				изделий.
 			</p>
-		</div>
+			<!-- </div> -->
 
-		<div class="txt__wrap">
-			<span>Важно:</span>
+			<!-- <div class="txt__wrap"> -->
+			<p class="txt__alert">Важно:</p>
 			<p class="txt__warn">
-				Вы уже идёте в обычный обувной магазин? Сходите, может повезёт…
-				Переходим к магазинам при фабриках. Да, это уже лучше, чем обычный магазин. Но насколько? Наши, российские, фабрики могут
-				и должны составлять конкуренцию импортным ботинкам и сапогам. И это будет, только когда? А пока качество «родной» обуви оставляет
-				желать лучшего. Вы направились в сторону ближайшей обувной фабрики? Удачи и вот, наконец, мы добрались и до сетевых магазинов.
-				Начнём экспертизу?
+				Кухня – это, без сомнения, отличное место для экспериментов.
+				И не только кулинарных. Почему бы поиграть с линиями
+				и пространством, выстраивая его по своему усмотрению и при этом
+				не перегружая лишними элементами?
+				Подобную возможность дает модель кухни «Альфа Кальвадос»,
+				представленная в нашем каталоге мебели. Минимализм по-прежнему
+				остается актуальным в такой сфере, как дизайн мебельных
+				изделий.
 			</p>
-		</div>
+			<!-- </div> -->
 
-		<div class="txt__wrap">
-			<span>Цитата:</span>
+			<!-- <div class="txt__wrap"> -->
+			<p class="txt__alert">Цитата:</p>
 			<p class="txt__quote">
-				Вы уже идёте в обычный обувной магазин? Сходите, может повезёт…
-				Переходим к магазинам при фабриках. Да, это уже лучше, чем обычный магазин. Но насколько? Наши, российские, фабрики
-				могут и должны составлять конкуренцию импортным ботинкам и сапогам. И это будет, только когда? А пока качество «родной»
-				обуви оставляет желать лучшего. Вы направились в сторону ближайшей обувной фабрики?
+				Кухня – это, без сомнения, отличное место для экспериментов.
+				И не только кулинарных. Почему бы поиграть с линиями
+				и пространством, выстраивая его по своему усмотрению и при этом
+				не перегружая лишними элементами?
+				Подобную возможность дает модель кухни «Альфа Кальвадос»,
+				представленная в нашем каталоге мебели. Минимализм по-прежнему
+				остается актуальным в такой сфере!
 			</p>
+			<!-- </div> -->
 		</div>
-
 		<div class="txt__wrap">
 			<div class="news-sm">
 				<div class="news-sm__container news-sm__container--s-big">
@@ -188,30 +193,18 @@
 							Сходите, может повезёт. Переходим
 							к магазинам при фабриках. Да, это уже
 							лучше, чем обычный магазин. Но насколько?
-							<br>
-							<br>
-							Наши, российские, фабрики могут
-							и должны составлять конкуренцию
-							импортным ботинкам и сапогам. И это будет,
-							только когда? А пока качество «родной»
-							обуви оставляет желать лучшего.
 						</p>
 					</a>
 				</div>
 				<div class="news-sm__container news-sm__container--s-big">
 					<a href="#">
 						<img src="./images/photo-350x250.jpg" height="250" width="350" alt="foto">
-						<p>Вы уже идёте в обычный обувной магазин?
-							Сходите, может повезёт. Переходим
-							к магазинам при фабриках. Да, это уже
-							лучше, чем обычный магазин. Но насколько?
-							<br>
-							<br>
+						<p>
 							Наши, российские, фабрики могут
 							и должны составлять конкуренцию
 							импортным ботинкам и сапогам. И это будет,
 							только когда? А пока качество «родной»
-							обуви оставляет желать лучшего.
+							обуви оставляет желать лучшего. Вы напрвились в сторону ближайшей обувной фабрики.
 						</p>
 					</a>
 				</div>
@@ -224,51 +217,33 @@
 					<div class="news-sm__container news-sm__container--big">
 						<a href="#">
 							<img src="./images/photo-250x200.jpg" alt="foto">
-							<p>Вы уже идёте в обычный обувной магазин?
-								Сходите, может повезёт. Переходим
-								к магазинам при фабриках. Да, это уже
-								лучше, чем обычный магазин. Но насколько?
-								<br>
-								<br>
+							<p>
 								Наши, российские, фабрики могут
 								и должны составлять конкуренцию
 								импортным ботинкам и сапогам. И это будет,
-								только когда? А пока качество «родной»
-								обуви оставляет желать лучшего.
+								только когда?
 							</p>
 						</a>
 					</div>
 					<div class="news-sm__container news-sm__container--big">
 						<a href="#">
 							<img src="./images/photo-250x200.jpg" alt="foto">
-							<p>Вы уже идёте в обычный обувной магазин?
-								Сходите, может повезёт. Переходим
-								к магазинам при фабриках. Да, это уже
-								лучше, чем обычный магазин. Но насколько?
-								<br>
-								<br>
+							<p>
 								Наши, российские, фабрики могут
 								и должны составлять конкуренцию
 								импортным ботинкам и сапогам. И это будет,
-								только когда? А пока качество «родной»
-								обуви оставляет желать лучшего.
+								только когда? 
 							</p>
 						</a>
 					</div>
 					<div class="news-sm__container news-sm__container--big">
 						<a href="#">
 							<img src="./images/photo-250x200.jpg" alt="foto">
-							<p>Вы уже идёте в обычный обувной магазин?
-								Сходите, может повезёт. Переходим
-								к магазинам при фабриках. Да, это уже
-								лучше, чем обычный магазин. Но насколько?
-								<br>
-								<br>
+							<p>
 								Наши, российские, фабрики могут
 								и должны составлять конкуренцию
 								импортным ботинкам и сапогам. И это будет,
-								только когда? А пока качество «родной»
-								обуви оставляет желать лучшего.
+								только когда?
 							</p>
 						</a>
 					</div>
@@ -329,7 +304,6 @@
 			</div>
 		</div>
 
-		<!-- ============================== -->
 		<div class="txt__wrap">
 			<p>
 				Кухня – это, без сомнения, отличное место для экспериментов. И не только кулинарных. Почему бы не поиграть
@@ -345,53 +319,55 @@
 			<div id="player" data-urlid="I53HDr0-Qew"></div>
 		</div>
 
-	<div class="txt__wrap">
-		<div class="txt__icons">
-			<span class="icons icons--doc"></span>
-			<span class="icons icons--xsl"></span>
-			<span class="icons icons--pdf"></span>
+		<div class="txt__wrap">
+			<div class="txt__icons">
+				<span class="icons icons--doc"></span>
+				<span class="icons icons--xsl"></span>
+				<span class="icons icons--pdf"></span>
+			</div>
 		</div>
-	</div>
 
-	<div class="txt__wrap">
-		<div class="txt__tabs"><a href="#">Раскрыть контент</a></div>
-		<div class="txt__tabs">
-			<a href="#" class="open" data-tab="txt__tab1">Закрыть контент</a>
-			<p class="txt__tab1">
-				Подобную возможность дает модель кухни «Альфа Кальвадос», представленная в нашем
-				Минимализм по-прежнему остается актуальным в такой сфере, как дизайн мебельных изделий
-				востребован он будет при оформлении небольших по размеру помещений, где помпезность
+		<div class="txt__wrap--nopad">
+			<div class="txt__tabs">
+				<a href="#" class="txt__podkat" data-tab="txt__tab--2"></a>
+				<p class="txt__tab txt__tab--2">
+					Я контент!!!
+				</p>
+			</div>
+			<div class="txt__tabs">
+				<a href="#" class="open txt__podkat" data-tab="txt__tab--1"></a>
+				<p class="txt__tab txt__tab--1">
+					Подобную возможность дает модель кухни «Альфа Кальвадос», представленная в нашем
+					Минимализм по-прежнему остается актуальным в такой сфере, как дизайн мебельных изделий
+					востребован он будет при оформлении небольших по размеру помещений, где помпезность
+					далеко не всегда бывает уместной.
+				</p>
+			</div>
+		</div>
+
+		<div class="txt__wrap">
+			<h6>
+				<strong>
+					«Я буду долго гнать велосипед, и ты не смей меня остановить», — заявил один <br>
+					из наших репортёров.
+				</strong>
+			</h6>
+			<p>
+				Подобную возможность дает модель кухни «Альфа Кальвадос», представленная в нашем каталоге мебели. <br>
+				Минимализм по-прежнему остается актуальным в такой сфере, как дизайн мебельных изделий. Особенно <br>
+				востребован он будет при оформлении небольших по размеру помещений, где помпезность классического стиля <br>
 				далеко не всегда бывает уместной.
+				<br>
+				<br>
+				В этом случае имеет смысл обратить внимание на эту модель, в которой основным украшением являются точно
+				выверенные прямые очертания и геометрически правильные формы.
 			</p>
 		</div>
 	</div>
 
-	<div class="txt__wrap">
-		<h6>
-			<strong>
-				«Я буду долго гнать велосипед, и ты не смей меня остановить», — заявил один
-				из наших репортёров.
-			</strong>
-		</h6>
-		<p>
-			Подобную возможность дает модель кухни «Альфа Кальвадос», представленная в нашем каталоге мебели.
-			Минимализм по-прежнему остается актуальным в такой сфере, как дизайн мебельных изделий. Особенно
-			востребован он будет при оформлении небольших по размеру помещений, где помпезность классического стиля
-			далеко не всегда бывает уместной.
-			<br>
-			<br>
-			В этом случае имеет смысл обратить внимание на эту модель, в которой основным украшением являются точно
-			выверенные прямые очертания и геометрически правильные формы.
-		</p>
-	</div>
-
-	
-</div>
-
-
-<aside>
-	@@include('../adv/adv-vertical.html')
-</aside>
+	<aside>
+		@@include('../adv/adv-vertical.html')
+	</aside>
 </section>
 
 
