--- a/app/components/adv/adv.html
+++ b/app/components/adv/adv.html
@@ -1,6 +1,6 @@
-<ul class="prop prop--bg">
-	<li><a href="#" class="prop__link prop__link--sample">Бесплатный <br> замер</a></li>
-	<li><a href="#" class="prop__link prop__link--design">Дизайн-проект <br> Вашей кухни</a></li>
-	<li><a href="#" class="prop__link prop__link--assembly">Установка <br> и сборка</a></li>
-	<li><a href="#" class="prop__link prop__link--credit">Рассрочка <br> на оплату</a></li>
-</ul>
+<div class="prop prop--bg">
+	<div class="prop__list"><a href="#" class="prop__link prop__link--sample">Бесплатный <br> замер</a></div>
+	<div class="prop__list"><a href="#" class="prop__link prop__link--design">Дизайн-проект <br> Вашей кухни</a></div>
+	<div class="prop__list"><a href="#" class="prop__link prop__link--assembly">Установка <br> и сборка</a></div>
+	<div class="prop__list"><a href="#" class="prop__link prop__link--credit">Рассрочка <br> на оплату</a></div>
+</div>
