--- a/app/components/breadcrumbs/_breadcrumbs.scss
+++ b/app/components/breadcrumbs/_breadcrumbs.scss
@@ -5,7 +5,7 @@
 
 	li {
 		font-family: 'RobotoRegular';
-		font-size: 13px;
+		font-size: 14px;
 		display: inline-block;
 		&:not(:last-child):after {
 			content: '>';
@@ -17,14 +17,18 @@
 		}
 	}
 
+	a {
+		font-size: 14px;
+	}
+
 	a:hover, a:focus {
 		text-decoration: underline;
 	}
 }
 
 .title {
-	margin: 10px 0;
-	// font-weight: bold;
+	margin: 20px 0 0;
+	padding: 0 3px;
 	h1 {
 		display: inline-block;
 		font-size: 30px;
