--- a/app/components/sliders/_slider-head.scss
+++ b/app/components/sliders/_slider-head.scss
@@ -10,10 +10,13 @@
 		max-width: 1200px;
 		min-width: 1024px;
 		margin: 0 auto;
-		padding: 32px 45px 0; 
+		padding: 30px 45px 0; 
 		box-sizing: border-box;
 		letter-spacing: -.3px;
 		height: 120px;
+		h2 {
+			font-size: 24px;
+		}
 	}
 
 	&__wrapper {
@@ -80,7 +83,7 @@
 	}
 
 	&__main {
-		height: 450px;
+		height: 405px;
 		max-width: 1300px;
 		margin-left: -100px;
 		position: relative;
@@ -236,7 +239,7 @@
 	position: absolute;
 	width: 26px;
 	height: 26px;
-	top: 24px;
+	top: 124px;
 	right: 176px;
 	background:transparent url('/images/icons.png') -366px -4px no-repeat;
 
