--- a/app/components/txt/_txt.scss
+++ b/app/components/txt/_txt.scss
@@ -2,7 +2,7 @@
 
 	&__title {
 		font-size: 24px;
-		margin: 36px auto 32px;
+		margin: 32px auto;
 		max-width: 1200px;
 		padding-left: 93px;
 		font-family: 'RobotoBold';
@@ -10,7 +10,7 @@
 		&--desc {
 			font-family: 'RobotoRegular';
 			font-size: 14px;
-			margin-top: 20px;
+			margin-top: 24px;
 		}
 	}
 
@@ -22,18 +22,41 @@
 
 	&__content {
 		max-width: 950px;
-		margin-right: 250px;
-		padding: 20px 50px;
+		margin: 0 250px 75px 0;
+		padding: 0 47px;
+
+		h2 {
+			max-width: 650px;
+			margin-bottom: 40px;
+		}
+
+		p {
+			// padding: 39px 0;
+			line-height: 1.75em;
+			font-size: 14px;
+			// max-width: 795px;
+		}
+
+		h6 {
+			padding: 29px 0 20px;
+		}
 	}
 
 	&__dib {
 		@extend .inline-block-vtop;
 		width: 50%;
+		box-sizing: border-box;
+
+		&:last-child {
+			padding-left: 55px;
+		}
 	}
 
 	&__tabs {
 		display: inline-block;
 		vertical-align: top;
+		margin-left: 15px;
+		min-width: 140px;
 		a {
 			position: relative;
 			margin-left: 30px;
@@ -62,77 +85,120 @@
 		}
 	}
 
-	&__tab1 {
-		width: 500px;
-		padding-left: 30px;
+	&__podkat {
+		&:after {
+			content: 'Раскрыть контент';
+		}
+
+		&.open:after {
+			content: 'Закрыть контент';
+		}
+	}
+	
+
+	&__tab {
+		max-width: 660px;
+		padding: 13px 0 10px 32px;
 		line-height: 1.4em;
 	}
 
 	@include e('wrap') {
-		margin: 40px 0;
+		margin: 38px 0;
+
+		&--nopad {
+			margin-left: -50px;
+		}
 	}
 	
 	@include e('block') {
-		margin: 20px 0;
+		margin-bottom: 30px;
+		padding-top: 6px;
+		box-sizing: border-box;
 		p {
-			line-height: 1.4em;
+			line-height: 1.75em;
+			padding: 0;
+		}
+
+		h3 {
+			font-family: 'Robotobold';
+			margin-bottom: 40px;
+			margin-top: 3px;
 		}
 	}	
 
 	@include e('img') {
 		@include m('fl-l') {
 			float: left;
-			margin: 0 45px 45px 0;
+			margin: 7px 50px 7px 0;
 		}
 	}
 
 	@include e('list') {
-		line-height: 1.5em;
+		line-height: 2em;
 		@include m('numb') {list-style: decimal inside;}
 		@include m('marker') {list-style: disc inside}
 	}
 
 	@include e('quote') {
-		margin: 20px 0 20px 20px;
-		padding: 30px 60px;
-		border-radius: 5px;
-		border: 1px solid $clr-gray;
-		position: relative;
+			border-radius: 5px;
+			border: 1px solid #6a6a6a;
+			box-sizing: border-box;
+			font-size: 14px;
+			line-height: 1.75em;
+			margin: 20px 0 20px 50px;
+			padding: 20px 49px 25px;
+			position: relative;
+			width: 800px;
 		&:before,
 		&:after {
 			position: absolute;
 			font-size: 72px;
 			color: $clr-gray;
+			font-family: arial;
 		}
 		&:before {
 			content: '“';
-			left: 22px;
-			top: 52px;
+			left: 12px;
+			top: 36px;
 		}
 		&:after {
 			content: '”';
-			right: 25px;
-			bottom: 15px;
+			right: 14px;
+			bottom: 1px;
 		}
 	}
 
 	@include e('warn') {
-		margin: 20px 0 20px 20px;
 		border-radius: 5px;
-		border: 1px solid $clr-red;
-		padding: 30px 25px;
+		border: 1px solid #e63c3e;
+		box-sizing: border-box;
+		font-size: 14px;
+		line-height: 1.75em;
+		margin: 16px 0 20px 52px;
+		padding: 20px 18px 23px 25px;
+		width: 800px;
+	}
+
+	@include e('alert') {
+		font-size: 14px;
+		line-height: 1.3em;
+		padding-left: 50px;
 	}
 
 	@include e('colont') {
-		margin: 20px 0 20px -50px;
-		padding: 30px 90px 30px 50px;
-		border-top: 1px solid $clr-gray;
-		border-bottom: 1px solid $clr-gray;
+		border-bottom: 1px solid #6a6a6a;
+		border-top: 1px solid #6a6a6a;
+		box-sizing: border-box;
+		font-size: 14px;
+		line-height: 1.7em;
+		margin: 50px 0 32px;
+		padding: 23px 75px 27px 50px;
+		width: 900px;
 	}
 
 	@include e('table') {
 		display: table;
-		margin: 40px 0;
+		margin: 56px 0 120px;
 	}
 
 	@include e('trow') {
@@ -150,21 +216,27 @@
 
 		@include m('caption') {
 			font-weight: bold;
-			line-height: 45px;
+			line-height: 50px;
 		}
 	}
 
 	@include e('tcell') {
-		padding-left: 20px;
+		font-size: 14px;
 		display: table-cell;
 		width: 200px;
 		&:last-child {
 			width: 100px;
 		}
 	}
+
+	&__icons {
+		line-height: 110px;
+	}
 }
 
 .news-sm {
+	padding: 17px 0 0 0;
+
 	@include e('container') {
 		display: inline-block;
 		vertical-align: top;
@@ -184,27 +256,49 @@
 
 		@include m('big') {
 			max-width: 250px;
-			margin: 0;
-			margin: 0 -4px;
+			margin: 0 -4px 0 0;
 			font-size: 14px;
 			&:nth-child(even) {
 				margin: 0 50px;
+			}
+
+			img {
+				margin-bottom: 18px;
+			}
+
+			p {
+				line-height: 1.75em;
 			}
 		}
 
 		@include m('s-big') {
 			max-width: 350px;
-			margin: 0 50px 0 0;
+			margin: 0 46px 0 0;
+			font-size: 14px;
+			line-height: 1.75em;
+
+			&:nth-child(even) {
+				margin: 0;
+			}
+
+			img {
+				margin-bottom: 18px;
+			}
+
+			p {
+				line-height: 1.7em;
+			}
 		}
 	}
 }
 
 .icons {
 	display: inline-block;
+	vertical-align: middle;
 	width: 55px;
 	height: 35px;
 	background:transparent url('/images/icons.png') -487px 0 no-repeat;
-	margin-right: 100px;
+	margin-right: 95px;
 
 	&--doc {background-position: -487px 0;}
 	&--xsl {background-position: -553px 0;}
