--- a/app/styles/layouts/_buttons.scss
+++ b/app/styles/layouts/_buttons.scss
@@ -4,4 +4,10 @@
 	text-transform: uppercase;
 	font-size: 13px;
 	text-align: center;
+
+	&:hover,
+	&:focus {
+		background-color: $clr-gray;
+		text-decoration: none;
+	}
 }
