--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,14 +89,14 @@ strong {
 
 h1, h2, h3, h4, h5 {
     font-family:  arial;
-    line-height: 1.5em;
+    line-height: 1.6em;
     font-weight: bold
 }
 h1 {
     font-size: 24px;
 }
 h2 {
-    font-size: 20px;
+    font-size: 19px;
 }
 h3 {
     font-size: 16px;
@@ -106,6 +106,11 @@ h4 {
 }
 h5 {
     font-size: 14px;
+}
+h6 {
+    font-size: 14px;
+    font-family: 'RobotBold';
+    line-height: 1.5em;
 }
 
 hr {
