--- a/app/template/index.html
+++ b/app/template/index.html
@@ -40,9 +40,9 @@
 <script>
   $('div.slider__head').sliderShop({
   	caseLimit: 1, //кол-во товаров в витрине
-    spaceSection: 'auto', //расстояние между секциями
-    animation: 'hide-show', //тип   анимации
-    timer: 5000, //автопереключение
+    spaceSection: 0, //расстояние между секциями
+    animation: 'hide-show', //тип анимации
+    timer: false, //автопереключение
     repeat: true, //показ слайдов по кругу
     animBox: 'slider__anim', // селектор вспдывающих блоков
     countBox: 'slider__ind', //селектор списка
@@ -55,6 +55,7 @@
     animation: 'slide', //тип анимации
     timer: 7000, //автопереключение
     repeat: true, //показ слайдов по кругу
+    response: false
   })
 
   $('.fancybox').fancybox();
